arrumando as noticias

--- a/noticias.html
+++ b/noticias.html
@@ -22,6 +22,8 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
+ <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -66,34 +68,63 @@
   
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <h1>Ana Clara Ribeiro</h1>
-      <h2>PORTFOLIO 2023</h2>
-    
-      <a href="#main" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
-    </div>
-  </section><!-- End Hero -->
+  
 
   <main id="main" style="background-color: #181925;">
+    <section id="musica" class="musica">
+      <div class="container">
 
-    <body class="contra-capa">
-    <div class="top">
-      <div class="logos">
-      <img class="logo-etec" src="assets/img/etec_ra_baixada_santista_guaruja_alberto_santos_dumont_cor.png">
-      <img class="logo-cps" src="assets/img/logo_cps_versao_cor.png" alt="">
-      <img class="logo-govsp" src="assets/img/governosp.png" alt="">
-    </div>
-      <hr>
-      <p><b>CENTRO PAULA SOUZA</b></p>
-      <p><b>ETEC – ESCOLA TÉCNICA ESTADUAL ALBERTO SANTOS DUMONT – GUARUJÁ – SP.</b></p>
-      <p><b>ALUNO: ANA CLARA RIBEIRO – 2º ANO C</b></p>
-    </div>
-      <p class="materia"><b>PORTFÓLIO DE LÍNGUA PORTUGUESA E LITERATURA</b></p>
-      <p class="direita"><b>Portfólio Escolar apresentado à disciplina de Língua Portuguesa e Literatura, ministrada pela professora Edenise Rosa para obtenção parcial de menção em Língua Portuguesa e Literatura – Ensino médio - da Etec Alberto Santos Dumont.</b></p>
-      <p class="center"><b>Guarujá – SP.</b></p>
-      <p class="center"><b>2023</b></p>
-  </body>
+        <div class="section-title">
+          <!--TITULO-->
+         <span>NOTICIAS</span>
+          <h2>NOTICIAS</h2>
+          <!--sub-titulo-->
+          <p></p>
+        </div>
+
+    <div class="swiffy-slider">
+      <ul class="slider-container">
+          <li><img src="assets/img/noticias/NOTICIA.png"></li>
+          <li><img src="assets/img/noticias/noticias (2).png"></li>
+          <li><img src="assets/img/noticias/noticias (3).png"></li>
+          <li><img src="assets/img/noticias/noticias (4).png"></li>
+          <li><img src="assets/img/noticias/noticias (5).png"></li>
+          <li><img src="assets/img/noticias/noticias (6).png"></li>
+          <li><img src="assets/img/noticias/noticias (7).png"></li>
+          <li><img src="assets/img/noticias/noticias (8).png"></li>
+          <li><img src="assets/img/noticias/noticias (9).png"></li>
+          <li><img src="assets/img/noticias/noticias (10).png"></li>
+          <li><img src="assets/img/noticias/noticias (11).png"></li>
+          <li><img src="assets/img/noticias/noticias (12).png"></li>
+          <li><img src="assets/img/noticias/noticias (13).png"></li>
+          <li><img src="assets/img/noticias/noticias (14).png"></li>
+          <li><img src="assets/img/noticias/noticias (15).png"></li>
+          <li><img src="assets/img/noticias/noticias (16).png"></li>
+          <li><img src="assets/img/noticias/noticias (17).png"></li>
+          
+      </ul>
+  
+      <button type="button" class="slider-nav"></button>
+      <button type="button" class="slider-nav slider-nav-next"></button>
+  
+      <div class="slider-indicators">
+          <button class="active"></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+      </div>
+  </div>
 
   </main><!-- End #main -->
 
