--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,7 @@
     <div class="container">
 
       <div class="section-title">
+        <span>MEU PORTFOLIO</span>
         <h2>MEU PORTFOLIO</h2>
         <p>Meus momentos em fotos</p>
       </div>
