--- a/quemsou.html
+++ b/quemsou.html
@@ -73,7 +73,7 @@
 
         <div class="section-title">
           <!--TÍTULO-->
-          
+          <span>QUEM SOU EU?</span>
           <h2>QUEM SOU EU?</h2>
           <!--ATÉ AQUI-->
 
