arrumando as noticias

--- a/eventos.html
+++ b/eventos.html
@@ -39,7 +39,7 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
-            <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
+            <li class="dropdown"><a href="musica.html"><span>MÚSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li><a href="musica.html" href2="#musica1">TE PROCURO</a></li>
                 <li><a href="musica.html" href2="#musica2">MY TEARS RICOCHET</a></li>
@@ -47,13 +47,13 @@
               </ul>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
+        <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISão</a></li>
         <li class="dropdown"><a href="literatura.html"><span>LITERATURA</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
           </ul>
-          <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
-          <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
+        <li><a class="nav-link scrollto" href="noticias.html">notícias</a></li>
+        <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
           <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
           <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
@@ -219,18 +219,17 @@
  <footer id="footer">
   <div class="container">
     <h3>Ana Clara Ribeiro</h3>
-    <p>Uma menina muito chata.</p>
     <div class="social-links">
       <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
       <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="https://instagram.com/anaclara.riib?igshid=MTNiYzNiMzkwZA%3D%3D&utm_source=qr" class="instagram"><i class="bx bxl-instagram"></i></a>
       <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
     </div>
     <div class="copyright">
-      &copy; Copyright <strong><span>Kayky</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>Ana Clara</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
-      Designed by <a>KaykyLindo</a>
+      Designed by <a>Ana Clara</a>
     </div>
   </div>
 </footer><!-- End Footer -->
