--- a/noticias.html
+++ b/noticias.html
@@ -41,7 +41,7 @@
           <ul>
             <li><a href="sonhos.html">SONHOS</a></li>
             <li><a href="medos.html">MEDOS</a></li>
-            <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
+            <li class="dropdown"><a href="musica.html"><span>MÚSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li><a href="musica.html" href2="#musica1">TE PROCURO</a></li>
                 <li><a href="musica.html" href2="#musica2">MY TEARS RICOCHET</a></li>
@@ -49,12 +49,12 @@
               </ul>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
+        <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISão</a></li>
         <li class="dropdown"><a href="literatura.html"><span>LITERATURA</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
           </ul>
-        <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
+        <li><a class="nav-link scrollto" href="noticias.html">notícias</a></li>
         <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
           <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
           <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
@@ -75,75 +75,177 @@
       <div class="container">
 
         <div class="section-title">
-          <!--TITULO-->
-         <span>NOTICIAS</span>
-          <h2>NOTICIAS</h2>
-          <!--sub-titulo-->
+          <span>NOTÍCIAS</span>
+          <h2>NOTÍCIAS</h2>
           <p></p>
         </div>
 
-    <div class="swiffy-slider">
-      <ul class="slider-container">
-          <li><img src="assets/img/noticias/NOTICIA.png"></li>
-          <li><img src="assets/img/noticias/noticias (2).png"></li>
-          <li><img src="assets/img/noticias/noticias (3).png"></li>
-          <li><img src="assets/img/noticias/noticias (4).png"></li>
-          <li><img src="assets/img/noticias/noticias (5).png"></li>
-          <li><img src="assets/img/noticias/noticias (6).png"></li>
-          <li><img src="assets/img/noticias/noticias (7).png"></li>
-          <li><img src="assets/img/noticias/noticias (8).png"></li>
-          <li><img src="assets/img/noticias/noticias (9).png"></li>
-          <li><img src="assets/img/noticias/noticias (10).png"></li>
-          <li><img src="assets/img/noticias/noticias (11).png"></li>
-          <li><img src="assets/img/noticias/noticias (12).png"></li>
-          <li><img src="assets/img/noticias/noticias (13).png"></li>
-          <li><img src="assets/img/noticias/noticias (14).png"></li>
-          <li><img src="assets/img/noticias/noticias (15).png"></li>
-          <li><img src="assets/img/noticias/noticias (16).png"></li>
-          <li><img src="assets/img/noticias/noticias (17).png"></li>
-          
-      </ul>
-  
-      <button type="button" class="slider-nav"></button>
-      <button type="button" class="slider-nav slider-nav-next"></button>
-  
-      <div class="slider-indicators">
-          <button class="active"></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-      </div>
-  </div>
+        <div class="swiffy-slider">
+          <ul class="slider-container">
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/fevereiroaabril.jpeg" alt="mes de fevereiro a abril">
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem1.png" alt="Notícia 1">
+                <div class="slider-text">SAÚDE</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem2.png" alt="Notícia 2">
+                <div class="slider-text">EDUCAÇÃO</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem3.png" alt="Notícia 3">
+                <div class="slider-text">MEIO AMBIENTE</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem4.png" alt="Notícia 4">
+                <div class="slider-text">TECNOLOGIA</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem5.png" alt="Notícia 5">
+                <div class="slider-text">POLÍTICA</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem6.png" alt="Notícia 6">
+                <div class="slider-text">DIVERSOS</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/maioajulho.jpeg" alt="mes de maio a julho">
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem7.png" alt="Notícia 7">
+                <div class="slider-text">SAÚDE</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem8.png" alt="Notícia 8">
+                <div class="slider-text">EDUCAÇÃO</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem9.png" alt="Notícia 9">
+                <div class="slider-text">MEIO AMBIENTE</div>
+              </div>
+            </li>
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem10.png" alt="Notícia 10">
+                <div class="slider-text">TECNOLOGIA</div>
+              </div>
+            </li>
 
-  </main><!-- End #main -->
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem11.png" alt="Notícia 10">
+                <div class="slider-text">POLÍTICA</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem12.png" alt="Notícia 10">
+                <div class="slider-text">DIVERSOS</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/agossto a outubro.jpeg" alt="AGOSTO A OUTUBRO">
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem13.png" alt="Notícia 10">
+                <div class="slider-text">SAÚDE</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem14.png" alt="Notícia 10">
+                <div class="slider-text">EDUCAÇÃO</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem15.png" alt="Notícia 10">
+                <div class="slider-text">MEIO AMBIENTE</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem16.png" alt="Notícia 10">
+                <div class="slider-text">TECNOLOGIA</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem17.png" alt="Notícia 10">
+                <div class="slider-text">POLÍTICA</div>
+              </div>
+            </li>
+
+            <li>
+              <div class="slider-item">
+                <img src="assets/img/noticias/Imagem18.png" alt="Notícia 10">
+                <div class="slider-text">DIVERSOS</div>
+              </div>
+            </li>
+
+          </ul>
+
+          <button type="button" class="slider-nav"></button>
+          <button type="button" class="slider-nav slider-nav-next"></button>
+
+          <div class="slider-indicators">
+            <button class="active"></button>
+            <button></button>
+            <button></button>
+            <!-- ... adicione os demais botões de acordo com a quantidade de itens ... -->
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- ======= rodape ======= -->
   <footer id="footer">
     <div class="container">
       <h3>Ana Clara Ribeiro</h3>
-      <p>Uma menina muito chata.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://instagram.com/anaclara.riib?igshid=MTNiYzNiMzkwZA%3D%3D&utm_source=qr" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Kayky</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Ana Clara</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a>KaykyLindo</a>
+        Designed by <a>Ana Clara</a>
       </div>
     </div>
   </footer><!-- End Footer -->
