arrumando as noticias

--- a/musica.html
+++ b/musica.html
@@ -100,7 +100,7 @@
           <!--sub-titulo-->
           <b><p>ANAVITÓRIA</p></b>
         </div>
-        <div class="row" style="height: 900px;">
+        <div class="row" style="height: 1000px;">
           <div >
             <img src="assets/img/musica1.jpg" class="image1">
           </div>
@@ -159,6 +159,10 @@
               </b>
               </p>
 
+              <audio controls>
+                <source src="assets/audio/ANAVITÓRIA - Te procuro.mp3" type="audio/mp3">
+              </audio>
+
                 <div class="interpretacao">
                 <p style="font-size: 20px;">Essa música fala sobre não conseguir esquecer alguém, mesmo depois de tentar se livrar desse sentimento. 
                  
@@ -192,7 +196,7 @@
           <!--sub-titulo-->
           <b><p>TAYLOR SWIFT</p></b>
         </div>
-        <div class="row" style="height: 800px;">
+        <div class="row" style="height: 1000px;">
           <div>
             <img src="assets/img/musica2.jpg" class="image2">
           </div>
@@ -243,6 +247,10 @@
                 </b>
               </p>
 
+              <audio controls style="transform: translate(0px, 150px);">
+                <source src="assets/audio/Taylor Swift - my tears ricochet.mp3" type="audio/mp3">
+              </audio>
+
                 <div class="interpretacao-2">
                 <p style="font-size: 20px;">     É uma música sobre como alguém pode ser seu melhor amigo, sua companhia e a pessoa que você mais confina na sua vida e depois pode se tornar seu maior e pior inimigo, que sabe como te machucar porque ele já foi a pessoa que você mais confiava. Traz uma sensação de traição e uma dor emocional profunda. O narrador reflete sobre o amor que tinha por alguém, jurando amá-lo até o fim. No entanto, o relacionamento terminou de uma maneira que deixou cicatrizes.
                   <br>
@@ -269,7 +277,7 @@
           <b><p>VANCOURVER SLEEP CLINIC</p></b>
         </div>
       </div>
-      <div class="row" style="height: 800px;">
+      <div class="row" style="height: 1000px;">
         <div >
           <img src="assets/img/musica3.jpg" class="image3">
         </div>
@@ -302,6 +310,10 @@
               </i>
               </b>
             </p>
+
+            <audio controls style="transform: translate(0px, 200px);">
+              <source src="assets/audio/Vancouver Sleep Clinic - Someone To Stay.mp3" type="audio/mp3">
+            </audio>
 
               <div class="interpretacao-3">
               <p style="font-size: 20px;">É uma música que expressa a solidão, superação e a necessidade de apoio emocional. O narrador descreve alguém que estava sozinho, abandonado e machucado, enfrentando a memória de algo doloroso. A ideia central é que todos precisamos de alguém para nos apoiar nos momentos difíceis e em um certo momento é citado que estamos todos indefesos (At the end of the day we're helpless). 
