--- a/noticias.html
+++ b/noticias.html
@@ -120,7 +120,7 @@
             <li>
               <div class="slider-item">
                 <img src="assets/img/noticias/Imagem6.png" alt="Notícia 6">
-                <div class="slider-text">DIVERSOS</div>
+                <div class="slider-text" style="color: white;">DIVERSOS</div>
               </div>
             </li>
             <li>
@@ -163,7 +163,7 @@
             <li>
               <div class="slider-item">
                 <img src="assets/img/noticias/Imagem12.png" alt="Notícia 10">
-                <div class="slider-text">DIVERSOS</div>
+                <div class="slider-text" style="color: rgb(0, 0, 0); transform: translate(-50%, -120px);">DIVERSOS</div>
               </div>
             </li>
 
