--- a/portfolio.html
+++ b/portfolio.html
@@ -753,6 +753,42 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
+          <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola (3).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Escola</h4>
+            <p>Escola</p>
+            <a href="assets/img/portfolio/escola/escola (2).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 35"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
+          <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola (1).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Escola</h4>
+            <p>Escola</p>
+            <a href="assets/img/portfolio/escola/escola (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 35"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-escola">
+          <div class="portfolio-img"><img src="assets/img/anaclaraexplodindo.jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Escola</h4>
+            <p>Escola</p>
+            <a href="assets/img/anaclaraexplodindo.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Escola"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-amigos">
+          <div class="portfolio-img"><img src="assets/img/portfolio/escola/escola (3).jpeg" class="img-fluid" alt=""></div>
+          <div class="portfolio-info">
+            <h4>Amigos</h4>
+            <p>Amigos</p>
+            <a href="assets/img/portfolio/escola/escola (3).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Amigos 35"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+
   
 
       </div>
